--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/reddit
 spring.datasource.username=postgres
 spring.datasource.password=93086585
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 hibernate.show_sql = true
 spring.jpa.generate-ddl=true
 
