--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/reddit
 spring.datasource.username=postgres
 spring.datasource.password=93086585
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 hibernate.show_sql = true
 spring.jpa.generate-ddl=true
 
@@ -15,3 +15,6 @@ spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+############ JWT Properties #####################
+jwt.expiration.time=90000
