correções, cors, e documentação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 ############ JWT Properties #####################
-jwt.expiration.time=90000
+jwt.expiration.time=1500000
