--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/reddit
 spring.datasource.username=postgres
-spring.datasource.password=93086585
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 hibernate.show_sql = true
 spring.jpa.generate-ddl=true
@@ -8,8 +8,8 @@ spring.jpa.generate-ddl=true
 ## Email properties ##
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=devteste1963@gmail.com
-spring.mail.password=dev123456789!
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
